completed left and middle sections of card

--- a/public/index.html
+++ b/public/index.html
@@ -2,18 +2,106 @@
 <html lang="en">
 
 <head>
+  <title>Daymond Blair - Front End Developer</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="theme-color" content="#ad38f1" />
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
-  <meta http-equiv="Pragma" content="no-cache">
-  <meta http-equiv="Expires" content="0">
-  <link rel="manifest" href="/manifest.json">
   <link rel="stylesheet" href="/css/styles.css">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;500;700&display=swap" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/5fd3867733.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
+  <div class="container-background">
+    <div class="page-background"></div>
+  </div>
+
+  <div class="center-site">
+    <div class="container-site">
+      <div class="navigation">
+        <ul>
+          <li><i class="fa fa-bookmark-o" aria-hidden="true"></i>
+          </li>
+          <li><i class="fa fa-user-o" aria-hidden="true"></i>
+            </i>
+          </li>
+          <li><i class="fa fa-lightbulb-o" aria-hidden="true"></i>
+            </i>
+          </li>
+          <li><i class="fa fa-envelope-o" aria-hidden="true"></i>
+          </li>
+        </ul>
+      </div>
+      <div class="user-profile">
+        <div class="name">Manny Francou </div>
+        <div class="border-image">
+          <div class="user-image"></div>
+        </div>
+        <div class="user-position">Full Stack Developer</div>
+        <div class="user-skills">
+          <div class="skill-title">Skills</div>
+          <div class="skill">React</div>
+          <div class="skill">Django</div>
+          <div class="skill">CI/CD</div>
+          <div class="skill">Version Control</div>
+        </div>
+      </div>
+      <div class="content-area">
+        <div class="hire-status">
+          <a href="#" class="primary-button">
+            Hire Me!
+          </a>
+        </div>
+        <div class="container-about">
+          <h2>About Me</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae fugiat nulla perspiciatis eius nam quasi
+            nesciunt explicabo rem, iste illo iure. Ullam consectetur dolore assumenda dignissimos illum alias nihil
+            beatae?Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolor harum quidem perspiciatis modi alias
+            velit aut, non saepe ut error pariatur cupiditate minus, voluptas perferendis molestias consectetur,
+            officiis deleniti inventore.
+          </p>
+
+        </div>
+        <div class="social-media">
+          <div class="social">
+            <div class="logo">
+              <i class="fa fa-twitter" aria-hidden="true"></i>
+            </div>
+            <div class="stats">
+              <span>8k</span>
+              followers
+            </div>
+          </div>
+          <div class="social">
+            <div class="logo">
+              <i class="fa fa-instagram" aria-hidden="true"></i>
+            </div>
+            <div class="stats">
+              <span>50k</span>
+              followers
+            </div>
+          </div>
+          <div class="social">
+            <div class="logo">
+              <i class="fa fa-github" aria-hidden="true"></i>
+            </div>
+            <div class="stats">
+              <span>3.3k</span>
+              followers
+            </div>
+          </div>
+          <div class="social">
+            <div class="logo">
+              <i class="fa fa-youtube-play" aria-hidden="true"></i>
+            </div>
+            <div class="stats">
+              <span>63.7k</span>
+              followers
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
 </body>
 
