added content to skills section

--- a/public/index.html
+++ b/public/index.html
@@ -41,6 +41,7 @@
           <div class="skill-title">Skills</div>
           <div class="skill">React</div>
           <div class="skill">Django</div>
+          <div class="skill">PostgreSQL</div>
           <div class="skill">CI/CD</div>
           <div class="skill">Version Control</div>
         </div>
